fix: nav bar style on firefox

--- a/beaconnect-react-app/src/pages/Main/components/NavBar/nav.css
+++ b/beaconnect-react-app/src/pages/Main/components/NavBar/nav.css
@@ -111,7 +111,7 @@ nav:hover .nav-link .nav-link-desc {
   }
 
   nav:hover {
-    width: auto;
+    width: 100%;
   }
 
   .logo {
@@ -122,14 +122,20 @@ nav:hover .nav-link .nav-link-desc {
     background: #e9edc9;
   }
 
+  .nav-wrapper {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+  }
+
   .nav-links {
     display: inline-flex;
-    width: calc(100vw / 6 * 5);
+    width: max-content;
   }
 
   .nav-controls {
     display: inline-flex;
-    width: calc(100vw / 6);
+    width: max-content;
     position: relative;
   }
 
